tests/macros/float/extension.stderr
error: option `extension` does not exist for kind `float`
 --> $DIR/extension.rs:2:43
  |
2 |     let q = requestty::questions![Float { extension: todo!() }];
  |                                           ^^^^^^^^^
