tests/macros/float/extension.rs
fn main() {
    let q = requestty::questions![Float { extension: todo!() }];
}
